[package]
name = "ggst_collision_editor_rs"
version = "0.1.0"
authors = ["WistfulHopes"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcsys = { git = "https://github.com/WistfulHopes/arcsys.git" }
eframe = { git = "https://github.com/emilk/egui.git" }
rfd = "0.8"
anyhow = "1"
serde = { version = "1", features = ['derive'] }
serde_json = "1"
structopt = "0"
byteorder = "1"
rayon = "1.5"